<resources>
    <string name="app_name">E-daughter</string>

    <!--Send image-->
    <string name="send_image_help_entry_name">Send image</string>
    <string name="show_how_to_send_image">Show me how to send image!</string>
    <string name="send_image_instruction">In order to send your picture you should look for \"Share\" icon like one presented below in your gallery application image preview.</string>
    <string name="gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="completed">That\'s all! Good luck!</string>
    <string name="help_me_send_image">Help me send image!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="choose_image_to_send">Choose image to send</string>
    <string name="choose_image_to_send_change">Change image</string>
    <string name="choose_app_to_send_image">Choose app to send image</string>
    <string name="pick_image_error">There was an error with your image.</string>
    <string name="share_image_error">There was an error while sharing image.</string>

    <!--Send image tips-->
    <string name="choose_image_from_gallery_tip">In your gallery choose image You want to share and click on it to show it on full screen.</string>
    <string name="share_tip">Now you should look for \"Share\" icon that could be displayed in toolbar in the top of screen.</string>
    <string name="more_tip">If it\'s not displayed there you could try to expand menu by tapping on icon like one above and then try to find \"Share\" option.</string>
    <string name="share2_tip">Share icon could also be displayed at the bottom.</string>
    <string name="share_bottom_sheet_tip">Then you should see panel like this one presented below where you can choose application you want to use to send your image.</string>

    <!--App to share names-->
    <string name="share_bluetooth">Bluetooth</string>
    <string name="share_drive">Save to Drive</string>
    <string name="share_maps">Add to Maps</string>
    <string name="share_messages">Messages</string>
    <string name="share_photos">Upload to Photos</string>
    <string name="share_gmail">Gmail</string>
    <string name="share_slack">Slack</string>

    <!--Send image guide toasts-->
    <string name="clicked_on_more">Bravo! Clicking on this button would expand menu, where \"Share\" option may be present.</string>
    <string name="clicked_on_share">This is a button with \"Share\" icon.</string>
    <string name="clicked_on_app_share">You can choose this or any other from listed apps.</string>

    <!--PL ^_^ -->

    <!--Orientation-->
    <string name="orientation_help_entry_name">Orientation</string>
    <string name="orientation_instruction">
        There are two ways your phone can act when you rotate it:
        \n1. Nothing happens\n2. Content of screen is rotated
        \n\nTo choose the way your phone react on rotation you have to change orientation setting.
    </string>
    <string name="show_orientation_with_settings">Show me how to change orientation with settings</string>
    <string name="show_orientation_with_status_bar">Show me how to change orientation with status bar</string>
    <string name="help_orientation">Help me to change orientation</string>

    <string name="orientation_tip_find_settings_app">Go to your apps and look for app called Settings.</string>
    <string name="orientation_tip_find_display">Find setting called display and click on it.</string>
    <string name="orientation_tip_find_device_rotation">Find setting called Device Rotation and click on it.</string>
    <string name="orientation_tip_choose_option">Now you can choose one of two available options.</string>

    <string name="settings">Settings</string>
    <string name="setting_more">More</string>
    <string name="setting_device">Device</string>
    <string name="setting_display">Display</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_brightness_level">Brightness level</string>
    <string name="setting_wallper">Wallper</string>
    <string name="setting_device_rotation">Device rotation</string>
    <string name="setting_font_size">Font size</string>

    <string name="orientation_option_rotate">Rotate the contents of the screen</string>
    <string name="orientation_option_portrait">Stay in portrait view</string>

    <string name="orientation_help_current_state">When device is rotated</string>
    <string name="change">change</string>
    <string name="no_save_settings_permission">Upss... looks like you did not gave this app permissions to write settings.</string>
    <string name="give_permissions">Give permissions</string>

    <!--Not implemented-->
    <string name="not_implemented">We working on that right now.</string>

    <!--About-->
    <string name="about">About</string>
    <string name="about_dev">About Dev</string>
    <string name="author">%1$s%2$sNatalia Jastrzębska @NapCode</string>
    <string name="by">" by "</string>
    <string name="icons_title">Icon Credits</string>
    <string name="author_title">Author</string>
    <string name="email_error">Could not find email app.</string>
    <string name="app_idea_title">App idea</string>
    <string name="about_app">This app is created for my mom, that kept asking me for help with sending image via her favourite app.</string>
    <string name="about_app_2">To be honest no one has to know right away what icon \"Share\" looks like.</string>
    <string name="about_app_3">Aim of this application is to teach user how to do certain actions and help them understand android.</string>
    <string name="about_app_4">If you have any suggestion about this app, let me know.</string>
    <string name="send_me_email">Send me email</string>
    <string name="more">More</string>
    <string name="about_app_more">This app is an open source project. Go ahead an take a look at source code.</string>
    <string name="go_to_source_code">Go to source code</string>

    <!--TRANSITIONS-->
    <string name="help_entry_image_view_transition_name" translatable="false">guide icon image view</string>
    <string name="help_entry_title_text_view_transition_name" translatable="false">guide title text image view</string>

</resources>