<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/brightness_textView"
        style="@style/SettingTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_brightness_level"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"/>

    <TextView
        android:id="@+id/wallper_textView"
        style="@style/SettingTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_wallper"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/brightness_textView"/>

    <TextView
        android:id="@+id/deviceRotation_textView"
        style="@style/SettingTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_device_rotation"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/wallper_textView"/>

    <TextView
        android:id="@+id/fontSize_textView"
        style="@style/SettingTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_font_size"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/deviceRotation_textView"/>

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/base_margin"/>


</android.support.constraint.ConstraintLayout>