<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orientationCurrentStateLabel_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orientation_help_current_state"
        android:textAlignment="center"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintBottom_toTopOf="@id/orientationCurrentStateValue_textView"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/orientationCurrentStateValue_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/changeOrientation_button"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/orientationCurrentStateLabel_textView"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/changeOrientation_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/change"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/noSaveSettingsGrantedPermissions_textView"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/orientationCurrentStateValue_textView"/>

    <TextView
        android:id="@+id/noSaveSettingsGrantedPermissions_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_save_settings_permission"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/giveSaveSettingsPermissions_button"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/changeOrientation_button"/>

    <Button
        android:id="@+id/giveSaveSettingsPermissions_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/give_permissions"
        android:theme="@style/ButtonStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/noSaveSettingsGrantedPermissions_textView"/>

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/base_margin"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/base_margin"/>


</android.support.constraint.ConstraintLayout>