<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@android:color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <android.support.constraint.Guideline
        android:id="@+id/firstVert_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/secondVert_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <android.support.constraint.Guideline
        android:id="@+id/firstHor_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/secondHor_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66"/>

    <ImageView
        android:id="@+id/firstCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/firstCell_textView"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_bluetooth"/>

    <TextView
        android:id="@+id/firstCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/share_bluetooth"
        app:layout_constraintBottom_toTopOf="@+id/firstHor_guideline"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/secondCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/secondCell_textView"
        app:layout_constraintEnd_toStartOf="@+id/secondVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstVert_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_google_drive"/>

    <TextView
        android:id="@+id/secondCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/share_drive"
        app:layout_constraintBottom_toTopOf="@+id/firstHor_guideline"
        app:layout_constraintEnd_toStartOf="@+id/secondVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstVert_guideline"/>

    <ImageView
        android:id="@+id/thirdCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintBottom_toTopOf="@+id/thirdCell_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/secondVert_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_google_maps"/>

    <TextView
        android:id="@+id/thirdCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/share_maps"
        app:layout_constraintBottom_toTopOf="@+id/firstHor_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/secondVert_guideline"/>


    <!--Second Row-->


    <ImageView
        android:id="@+id/fourthCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/fourthCell_textView"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstHor_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_messages"/>

    <TextView
        android:id="@+id/fourthCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/share_messages"
        app:layout_constraintBottom_toTopOf="@+id/secondHor_guideline"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/fifthCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fifthCell_textView"
        app:layout_constraintEnd_toStartOf="@+id/secondVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstVert_guideline"
        app:layout_constraintTop_toBottomOf="@id/firstHor_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/fifthCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/share_photos"
        app:layout_constraintBottom_toTopOf="@+id/secondHor_guideline"
        app:layout_constraintEnd_toStartOf="@+id/secondVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstVert_guideline"
        app:layout_constraintTop_toBottomOf="@+id/fifthCell_imageView"/>

    <ImageView
        android:id="@+id/sixthCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sixthCell_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/secondVert_guideline"
        app:layout_constraintTop_toBottomOf="@id/firstHor_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/sixthCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/share_gmail"
        app:layout_constraintBottom_toTopOf="@+id/secondHor_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/secondVert_guideline"
        app:layout_constraintTop_toBottomOf="@+id/sixthCell_imageView"/>


    <!--Third row-->
    <ImageView
        android:id="@+id/seventhCell_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seventhCell_textView"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondHor_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/ic_launcher_round"/>

    <TextView
        android:id="@+id/seventhCell_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/share_slack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/firstVert_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seventhCell_imageView"/>
</android.support.constraint.ConstraintLayout>